set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra")
# set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Boost 1.71 REQUIRED COMPONENTS program_options)
# find_package(PkgConfig REQUIRED)
find_package(ZLIB REQUIRED)
FIND_LIBRARY(CRYPTOPP crypto++ /usr/lib) ## location of libcryptopp.so or libcryptopp.a)
find_package(PkgConfig REQUIRED)
pkg_check_modules(JSONCPP jsoncpp)
include_directories(${Boost_INCLUDE_DIR})

add_executable(mlsteg main.cc base64.cc)
target_link_libraries(mlsteg PRIVATE ${Boost_LIBRARIES} ZLIB::ZLIB cryptopp ${JSONCPP_LIBRARIES})
install(TARGETS mlsteg RUNTIME DESTINATION bin)
